# tsp

./: CMakeLists.txt  README
TSPLIB/: si175.tsp
TSP_MATILDA/LKCChard/: 000.sol  000.tsp  001.sol  001.tsp  002.sol  002.tsp  003.sol  003.tsp  004.sol  004.tsp  005.sol  005.tsp  006.sol  006.tsp  007.sol  007.tsp  008.sol  008.tsp  009.sol  009.tsp  010.sol  010.tsp  011.sol  011.tsp  012.sol  012.tsp  013.sol  013.tsp  014.sol  014.tsp  015.sol  015.tsp  016.sol  016.tsp  017.sol  017.tsp  018.sol  018.tsp  019.sol  019.tsp  (+340 more)
cmake/: FindCplex.cmake
results/: att48_res_obj.csv  att48_res_sol.csv
src/: graph.cpp  graph.h  main.cpp  reduce.cpp  reduce.h  solver.cpp  solver.h  training.cpp  training.h
train_data/: train_model
